# ActiveDirectoryRoleService

./: .dockerignore  .env.dev  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  pyproject.toml
ad_manager/: manage.py
ad_manager/accounts/: admin.py  apps.py  backends.py  forms.py  middleware.py  models.py  urls.py  views.py
ad_manager/accounts/migrations/: 0001_initial.py  0002_alter_userprofile_ad_guid.py
ad_manager/ad_manager/: __init__.py  celery.py  urls.py  wsgi.py
ad_manager/ad_manager/settings/: base.py  development.py  production.py
ad_manager/audit/: apps.py  exporters.py  models.py  services.py  urls.py  views.py
ad_manager/audit/migrations/: 0001_initial.py
ad_manager/core/: constants.py  context_processors.py  middleware.py  mixins.py  password.py
ad_manager/core/templates/: base.html
ad_manager/directory/: apps.py  urls.py
ad_manager/directory/services/: __init__.py  base_service.py  computer_service.py  ldap_connection.py  ou_service.py  user_service.py
ad_manager/directory/templatetags/: ad_filters.py
ad_manager/dns_manager/: apps.py  forms.py  models.py  urls.py  views.py
ad_manager/gpo/: apps.py  urls.py  views.py
ad_manager/groups/: apps.py  forms.py  models.py  urls.py  views.py
ad_manager/notifications/: forms.py  models.py  tasks.py  urls.py  views.py
docker/: Dockerfile  celery-entrypoint.sh  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
docker/nginx/: nginx.conf
docker/samba/: Dockerfile  samba-entrypoint.sh  seed-directory.py
requirements/: base.txt  development.txt
(+56 files in other folders)
